--- a/unizonn/package.json
+++ b/unizonn/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "unizonn",
-  "scripts": {
-    "start": "dotenv -- nodemon -e ts,graphql -x ts-node src/index.ts",
-    "dev": "npm-run-all --parallel start playground",
-    "debug": "dotenv -- nodemon -e ts,graphql -x ts-node --inspect src/index.ts",
-    "playground": "graphql playground",
-    "build": "rimraf dist && tsc"
-  },
+  "name": "unizonn-client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bcryptjs": "2.4.3",
-    "graphql-yoga": "1.2.2",
-    "jsonwebtoken": "8.1.1",
-    "prisma-binding": "1.5.5"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "2.4.1",
-    "dotenv-cli": "1.4.0",
-    "graphql-cli": "2.13.1",
-    "nodemon": "1.14.12",
-    "npm-run-all": "4.1.2",
-    "prisma": "1.1.3",
-    "rimraf": "2.6.2",
-    "ts-node": "4.1.0",
-    "typescript": "2.7.1"
+    "react-scripts": "1.1.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "prettier": "prettier-eslint --write \"src/**/*.+(ts|tsx)\"",
+    "prettier-dry-run": "prettier-eslint \"src/**/*.+(ts|tsx)\" -l debug"
   }
 }
