--- a/unizonn/tsconfig.json
+++ b/unizonn/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "sourceMap": true,
-    "rootDir": "src",
+    "rootDir": "server",
     "outDir": "dist",
     "lib": [
       "esnext", "dom"
