--- a/unizonn/tsconfig.json
+++ b/unizonn/tsconfig.json
@@ -8,6 +8,11 @@
     "outDir": "dist",
     "lib": [
       "esnext", "dom"
+    ],
+    "exclude": [
+      "node_modules",
+      "dist",
+      "build"
     ]
   }
 }
