User basic auth and Project setup complete

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Unizonn App",
-  "name": "Unizonn community",
+  "short_name": "Unizonn",
+  "name": "Unizonn",
   "icons": [
     {
       "src": "favicon.ico",
