--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@types/moment": "^2.13.0",
     "@types/pure-render-decorator": "^0.2.28",
@@ -17,6 +18,7 @@
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "tachyons": "^4.9.1"
   },
@@ -31,6 +33,7 @@
     "@types/node": "^9.4.2",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "react-router-role-authorization": "^1.1.4",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "typescript": "^2.7.1"
