--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app-test",
+  "name": "unizonn",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
@@ -26,7 +26,8 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "deploy": "now -e REACT_APP_SECRET_CODE=secretcode"
   },
   "devDependencies": {
     "@types/jest": "^22.1.1",
@@ -37,5 +38,8 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "typescript": "^2.7.1"
+  },
+  "now": {
+    "alias": "unizonn"
   }
 }
