--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "unizonn",
+  "name": "uniserver",
   "version": "1.0.0",
+  "homepage": ".",
   "scripts": {
     "start": "dotenv -- nodemon -e ts,graphql -x ts-node src/index.ts",
     "dev": "npm-run-all --parallel start playground",
