--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "apollo-cache-inmemory": "^1.1.7",
     "apollo-client": "^2.2.2",
     "apollo-link": "^1.0.7",
+    "apollo-link-context": "^1.0.5",
     "apollo-link-http": "^1.3.2",
+    "glamor": "^2.20.40",
+    "glamorous": "^4.11.4",
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
     "material-ui": "^1.0.0-beta.32",
