--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,16 @@
     "lib": [
       "esnext", "dom", "es6", "esnext.asynciterable"
     ],
+    "baseUrl": "./src",
+    "paths": {
+        "@": ["src"],
+        "Components": ["./src/Components"],
+        "Containers": ["./src/Components/Containers"],
+        "Assets": ["./src/Assets"],
+        "ReduxApp": ["./src/Redux"],
+        "Theme": ["./src/Theme"],
+        "Utils": ["./src/Utils"]
+    },
     "skipLibCheck": true,
     "sourceMap": true,
     "allowJs": true,
