--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/moment": "^2.13.0",
     "@types/pure-render-decorator": "^0.2.28",
     "@types/react-addons-css-transition-group": "^15.0.3",
+    "Dante2": "^0.4.3",
     "apollo-cache-inmemory": "^1.1.7",
     "apollo-client": "^2.2.2",
     "apollo-link": "^1.0.7",
@@ -18,6 +19,7 @@
     "graphql-tag": "^2.7.3",
     "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "^1.0.0-beta.17",
+    "multiscroll-reactjs": "^1.0.2",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
@@ -30,7 +32,8 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "deploy": "now -e REACT_APP_SECRET_CODE=secretcode"
+    "deploy": "now -e REACT_APP_SECRET_CODE=secretcode",
+    "push": "git push origin && now && now alias unizonn.now.sh"
   },
   "devDependencies": {
     "@types/jest": "^22.1.1",
