--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@types/jquery": "^3.3.0",
     "@types/moment": "^2.13.0",
     "@types/pure-render-decorator": "^0.2.28",
     "@types/react-addons-css-transition-group": "^15.0.3",
@@ -17,6 +18,7 @@
     "glamorous": "^4.11.4",
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
+    "jquery": "^3.3.1",
     "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "^1.0.0-beta.17",
     "multiscroll-reactjs": "^1.0.2",
@@ -25,6 +27,7 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
+    "react-spark-scroll-gsap": "^4.0.0",
     "tachyons": "^4.9.1"
   },
   "scripts": {
