--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "lib": [
       "esnext", "dom", "es6", "esnext.asynciterable"
     ],
+    "typeRoots": ["node_modules/@types", "src/CustomTypings"],
     "baseUrl": "./src",
     "paths": {
         "@": ["src"],
