--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "apollo-link": "^1.0.7",
     "apollo-link-context": "^1.0.5",
     "apollo-link-http": "^1.3.2",
+    "fullpage.js": "^2.9.6",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.4",
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
+    "helmet": "^3.11.0",
     "jquery": "^3.3.1",
     "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -25,9 +27,11 @@
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "react-spark-scroll-gsap": "^4.0.0",
+    "react-youtube": "^7.5.0",
     "tachyons": "^4.9.1"
   },
   "scripts": {
