--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-link": "^1.0.7",
     "apollo-link-context": "^1.0.5",
     "apollo-link-http": "^1.3.2",
+    "compass-mixins": "^0.12.10",
     "fullpage.js": "^2.9.6",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.4",
@@ -24,19 +25,27 @@
     "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "^1.0.0-beta.17",
     "multiscroll-reactjs": "^1.0.2",
+    "node-sass-chokidar": "^0.0.3",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-modal": "^1.3.2",
     "react-scripts-ts": "2.13.0",
     "react-spark-scroll-gsap": "^4.0.0",
     "react-youtube": "^7.5.0",
-    "tachyons": "^4.9.1"
+    "spectre.css": "^0.5.0",
+    "tachyons": "^4.9.1",
+    "uikit": "^3.0.0-beta.40"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-ts": "react-scripts-ts start",
+    "start": "npm-run-all -p watch-css start-ts",
+    "build-ts": "react-scripts-ts build",
+    "build": "npm-run-all build-css build-ts",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "deploy": "now -e REACT_APP_SECRET_CODE=secretcode",
@@ -44,13 +53,17 @@
   },
   "devDependencies": {
     "@types/jest": "^22.1.1",
-    "@types/node": "^9.4.2",
+    "@types/node": "^9.4.6",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "node-sass": "^4.7.2",
+    "npm-run-all": "^4.1.2",
     "react-router-role-authorization": "^1.1.4",
+    "sass-loader": "^6.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "typescript": "^2.7.1"
+    "typescript": "^2.7.1",
+    "webpack": "^3.11.0"
   },
   "now": {
     "alias": "unizonn"
