--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "Dante2": "^0.4.3",
     "apollo-cache-inmemory": "^1.1.7",
     "apollo-client": "^2.2.2",
-    "apollo-link": "^1.0.7",
+    "apollo-link": "^1.1.0",
     "apollo-link-context": "^1.0.5",
+    "apollo-link-error": "^1.0.5",
     "apollo-link-http": "^1.3.2",
+    "apollo-link-queue": "^2.0.0",
+    "apollo-link-retry": "^2.1.2",
+    "apollo-link-state": "^0.4.0",
+    "apollo-link-ws": "^1.0.5",
+    "apollo-utilities": "^1.0.8",
     "compass-mixins": "^0.12.10",
     "fullpage.js": "^2.9.6",
     "glamor": "^2.20.40",
@@ -36,6 +42,7 @@
     "react-spark-scroll-gsap": "^4.0.0",
     "react-youtube": "^7.5.0",
     "spectre.css": "^0.5.0",
+    "subscriptions-transport-ws": "^0.9.5",
     "tachyons": "^4.9.1",
     "uikit": "^3.0.0-beta.40"
   },
