--- a/package.json
+++ b/package.json
@@ -20,28 +20,35 @@
     "apollo-link-state": "^0.4.0",
     "apollo-link-ws": "^1.0.5",
     "apollo-utilities": "^1.0.8",
-    "compass-mixins": "^0.12.10",
-    "fullpage.js": "^2.9.6",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.4",
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
     "helmet": "^3.11.0",
     "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
     "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "^1.0.0-beta.17",
+    "megadraft": "^0.4.33",
     "multiscroll-reactjs": "^1.0.2",
     "node-sass-chokidar": "^0.0.3",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
+    "react-calendar": "^2.13.0",
     "react-dom": "^16.2.0",
+    "react-geolocated": "^2.3.0",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
+    "react-infinite-scroller": "^1.1.3",
+    "react-recaptcha": "^2.3.7",
     "react-router-dom": "^4.2.2",
     "react-router-modal": "^1.3.2",
     "react-scripts-ts": "2.13.0",
     "react-spark-scroll-gsap": "^4.0.0",
+    "react-swagchat": "^0.11.1",
     "react-youtube": "^7.5.0",
-    "spectre.css": "^0.5.0",
+    "recompose": "^0.26.0",
+    "spectre.css": "^0.5.1",
     "subscriptions-transport-ws": "^0.9.5",
     "tachyons": "^4.9.1",
     "uikit": "^3.0.0-beta.40"
