--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-calendar": "^2.13.0",
+    "react-chat-elements": "^0.8.2",
+    "react-chat-ui": "^0.3.0",
     "react-dom": "^16.2.0",
     "react-geolocated": "^2.3.0",
     "react-google-maps": "^9.4.5",
