Another major upgrade with ME query

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@types/moment": "^2.13.0",
     "@types/pure-render-decorator": "^0.2.28",
     "@types/react-addons-css-transition-group": "^15.0.3",
-    "Dante2": "^0.4.3",
     "apollo-cache-inmemory": "^1.1.7",
     "apollo-client": "^2.2.2",
     "apollo-link": "^1.1.0",
@@ -20,6 +19,8 @@
     "apollo-link-state": "^0.4.0",
     "apollo-link-ws": "^1.0.5",
     "apollo-utilities": "^1.0.8",
+    "draft-convert": "^2.0.1",
+    "draft-js-dnd-plugin": "^2.0.0-beta1",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.4",
     "graphql": "^0.13.0",
@@ -27,6 +28,7 @@
     "helmet": "^3.11.0",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
+    "last-draft": "^3.3.0",
     "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "^1.0.0-beta.17",
     "megadraft": "^0.4.33",
