--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,15 @@
     "push": "git push origin && now && now alias uniserver.now.sh"
   },
   "dependencies": {
+    "azure": "^2.2.1-preview",
     "bcryptjs": "2.4.3",
+    "cloudinary": "^1.10.0",
     "graphql-yoga": "1.3.4",
     "jsonwebtoken": "8.1.1",
-    "prisma-binding": "1.5.12"
+    "mime-types": "^2.1.18",
+    "multiparty": "^4.1.3",
+    "prisma-binding": "1.5.12",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.1",
