--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "apollo-link-state": "^0.4.0",
     "apollo-link-ws": "^1.0.5",
     "apollo-utilities": "^1.0.8",
+    "cra-append-sw": "^2.1.1",
     "draft-convert": "^2.0.1",
+    "draft-js": "^0.10.5",
     "draft-js-dnd-plugin": "^2.0.0-beta1",
+    "draft-js-plugins-editor": "^2.0.4",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.4",
     "graphql": "^0.13.0",
@@ -80,6 +83,7 @@
     "sass-loader": "^6.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "typescript": "^2.7.1",
     "webpack": "^3.11.0"
   },
