--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,7 @@
 {
  "name": "Unizonn",
+ "short_name": "Unizonn",
+ "background_color": "#ffffff",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
@@ -37,5 +39,12 @@
    "type": "image\/png",
    "density": "4.0"
   }
- ]
+ ],
+ "theme_color": "green",
+ "display": "standalone",
+ "start_url": "./index.html",
+ "related_applications": [{
+   "platform": "play",
+   "url": "https://play.google.com/store/apps/details?id=cheeaun.hackerweb"
+  }]
 }
