--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,14 @@
     "azure": "^2.2.1-preview",
     "bcryptjs": "2.4.3",
     "cloudinary": "^1.10.0",
+    "feedparser": "^2.2.9",
     "graphql-yoga": "1.3.4",
     "jsonwebtoken": "8.1.1",
     "mime-types": "^2.1.18",
     "multiparty": "^4.1.3",
+    "node-cron": "^1.2.1",
     "prisma-binding": "1.5.12",
+    "rss-parser": "^3.1.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
