--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/moment": "^2.13.0",
     "@types/pure-render-decorator": "^0.2.28",
     "@types/react-addons-css-transition-group": "^15.0.3",
+    "anchor-ui": "^6.2.1",
     "apollo-cache-inmemory": "^1.1.7",
     "apollo-client": "^2.2.2",
     "apollo-link": "^1.1.0",
@@ -19,7 +20,9 @@
     "apollo-link-state": "^0.4.0",
     "apollo-link-ws": "^1.0.5",
     "apollo-utilities": "^1.0.8",
+    "draft-convert": "^2.0.1",
     "draft-js": "^0.10.5",
+    "draft-js-dnd-plugin": "^2.0.0-beta1",
     "draft-js-emoji-plugin": "^2.0.1",
     "draft-js-plugins-editor": "^2.0.4",
     "fullpage-react": "^3.0.28",
@@ -30,10 +33,12 @@
     "helmet": "^3.11.0",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
+    "last-draft": "^3.3.0",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.17",
     "multiscroll-reactjs": "^1.0.2",
     "node-sass-chokidar": "^0.0.3",
+    "ory-editor": "^0.2.27",
     "react": "^16.2.0",
     "react-anime": "^2.1.0",
     "react-apollo": "^2.0.4",
@@ -52,6 +57,7 @@
     "react-spark-scroll-gsap": "^4.0.0",
     "react-spinkit": "^3.0.0",
     "react-stack-grid": "^0.7.1",
+    "react-tap-event-plugin": "^3.0.2",
     "recompose": "^0.26.0",
     "spectre.css": "^0.5.1",
     "subscriptions-transport-ws": "^0.9.5",
