Added of bug fixes

--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "apollo-link-state": "^0.4.0",
     "apollo-link-ws": "^1.0.5",
     "apollo-utilities": "^1.0.8",
+    "bootstrap": "^4.0.0",
     "draft-convert": "^2.0.1",
     "draft-js": "^0.10.5",
     "draft-js-dnd-plugin": "^2.0.0-beta1",
     "draft-js-emoji-plugin": "^2.0.1",
     "draft-js-plugins-editor": "^2.0.4",
+    "font-awesome": "^4.7.0",
+    "font-awesome-sass": "^4.7.0",
     "fullpage-react": "^3.0.28",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.4",
@@ -58,6 +61,7 @@
     "react-spinkit": "^3.0.0",
     "react-stack-grid": "^0.7.1",
     "react-tap-event-plugin": "^3.0.2",
+    "react-timeago": "^3.4.3",
     "recompose": "^0.26.0",
     "spectre.css": "^0.5.1",
     "subscriptions-transport-ws": "^0.9.5",
