--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/moment": "^2.13.0",
     "@types/pure-render-decorator": "^0.2.28",
     "@types/react-addons-css-transition-group": "^15.0.3",
+    "Dante2": "^0.4.3",
     "anchor-ui": "^6.2.1",
     "apollo-cache-inmemory": "^1.1.7",
     "apollo-client": "^2.2.2",
@@ -26,6 +27,7 @@
     "draft-js-dnd-plugin": "^2.0.0-beta1",
     "draft-js-emoji-plugin": "^2.0.1",
     "draft-js-plugins-editor": "^2.0.4",
+    "driver.js": "^0.2.2",
     "font-awesome": "^4.7.0",
     "font-awesome-sass": "^4.7.0",
     "fullpage-react": "^3.0.28",
@@ -39,6 +41,7 @@
     "last-draft": "^3.3.0",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.17",
+    "medium-draft": "^0.6.0-beta1",
     "multiscroll-reactjs": "^1.0.2",
     "node-sass-chokidar": "^0.0.3",
     "ory-editor": "^0.2.27",
@@ -57,9 +60,11 @@
     "react-router-dom": "^4.2.2",
     "react-router-modal": "^1.3.2",
     "react-scripts-ts": "2.13.0",
+    "react-select-plus": "^1.2.0",
     "react-spark-scroll-gsap": "^4.0.0",
     "react-spinkit": "^3.0.0",
     "react-stack-grid": "^0.7.1",
+    "react-tag-input": "^4.8.2",
     "react-tap-event-plugin": "^3.0.2",
     "react-timeago": "^3.4.3",
     "recompose": "^0.26.0",
