--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "apollo-link-state": "^0.4.0",
     "apollo-link-ws": "^1.0.5",
     "apollo-utilities": "^1.0.8",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-app": "^3.1.1",
     "bootstrap": "^4.0.0",
+    "chalk": "^2.3.2",
     "draft-convert": "^2.0.1",
     "draft-js": "^0.10.5",
     "draft-js-dnd-plugin": "^2.0.0-beta1",
     "draft-js-emoji-plugin": "^2.0.1",
     "draft-js-plugins-editor": "^2.0.4",
     "driver.js": "^0.2.2",
+    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "font-awesome-sass": "^4.7.0",
     "fullpage-react": "^3.0.28",
@@ -36,6 +40,7 @@
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
     "helmet": "^3.11.0",
+    "ignore-styles": "^5.0.1",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "last-draft": "^3.3.0",
@@ -45,17 +50,21 @@
     "multiscroll-reactjs": "^1.0.2",
     "node-sass-chokidar": "^0.0.3",
     "ory-editor": "^0.2.27",
+    "perfect-scrollbar": "^1.3.0",
     "react": "^16.2.0",
     "react-anime": "^2.1.0",
     "react-apollo": "^2.0.4",
+    "react-async-bootstrapper": "^1.1.2",
     "react-async-component": "^1.0.2",
     "react-calendar": "^2.13.0",
     "react-content-loader": "^3.1.1",
     "react-dom": "^16.2.0",
+    "react-error-overlay": "^4.0.0",
     "react-geolocated": "^2.3.0",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
     "react-infinite-scroller": "^1.1.3",
+    "react-perfect-scrollbar": "^1.0.0",
     "react-recaptcha": "^2.3.7",
     "react-router-dom": "^4.2.2",
     "react-router-modal": "^1.3.2",
@@ -68,8 +77,10 @@
     "react-tap-event-plugin": "^3.0.2",
     "react-timeago": "^3.4.3",
     "recompose": "^0.26.0",
+    "serialize-javascript": "^1.4.0",
     "spectre.css": "^0.5.1",
     "subscriptions-transport-ws": "^0.9.5",
+    "typescript-require": "^0.2.9-1",
     "uikit": "^3.0.0-beta.40"
   },
   "scripts": {
@@ -79,6 +90,7 @@
     "start": "npm-run-all -p watch-css start-ts",
     "build-ts": "react-scripts-ts build",
     "build": "npm-run-all build-css build-ts",
+    "ssr": "SET BABEL_ENV=development node ssr/bootstrap.js",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "deploy": "now -e REACT_APP_SECRET_CODE=secretcode",
