--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "multiscroll-reactjs": "^1.0.2",
     "node-sass-chokidar": "^1.1.2",
     "perfect-scrollbar": "^1.3.0",
-    "react": "16.2.0",
+    "react": "^16.2.0",
     "react-anime": "^2.1.0",
     "react-apollo": "^2.0.4",
     "react-async-bootstrapper": "^1.1.2",
