--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "razzle-examples-with-typescript",
+  "name": "unizonn-react",
   "version": "0.8.12",
   "license": "MIT",
   "scripts": {
@@ -29,6 +29,7 @@
     "autoprefixer": "^8.1.0",
     "bootstrap": "^4.0.0",
     "chalk": "^2.3.2",
+    "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "draft-convert": "^2.0.1",
     "draft-js": "^0.10.5",
@@ -48,9 +49,12 @@
     "helmet": "^3.12.0",
     "history": "^4.7.2",
     "http-status-enum": "^1.0.2",
+    "ignore-loader": "^0.1.2",
     "ignore-styles": "^5.0.1",
     "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^2.0.0",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "last-draft": "3.3.0",
     "ld-color-picker": "^2.0.0",
@@ -59,12 +63,15 @@
     "ld-mention": "^2.1.0",
     "ld-sticker": "^2.0.0",
     "ld-video": "^2.0.0",
+    "lodash": "^4.17.5",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "medium-draft": "^0.6.0-beta1",
     "multiscroll-reactjs": "^1.0.2",
     "node-sass-chokidar": "^1.1.2",
     "perfect-scrollbar": "^1.3.0",
+    "prop-types": "^15.6.1",
+    "rambda": "^1.0.13",
     "react": "^16.2.0",
     "react-anime": "^2.1.0",
     "react-apollo": "^2.0.4",
@@ -72,6 +79,8 @@
     "react-async-component": "^1.0.2",
     "react-calendar": "^2.13.5",
     "react-content-loader": "^3.1.1",
+    "react-cookie-banner": "^3.0.0",
+    "react-cookies": "^0.1.0",
     "react-css-modules": "^4.1.0",
     "react-dom": "^16.2.0",
     "react-error-overlay": "^4.0.0",
@@ -79,6 +88,7 @@
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.0.3",
     "react-infinite-scroller": "^1.1.3",
+    "react-loadable": "^5.3.1",
     "react-perfect-scrollbar": "^1.0.0",
     "react-recaptcha": "^2.3.7",
     "react-redux": "^5.0.6",
@@ -97,11 +107,13 @@
     "react-timeago": "^3.4.3",
     "recompose": "^0.26.0",
     "rxjs": "^5.5.6",
+    "sass-loader": "^6.0.7",
     "serve-favicon": "^2.3.2",
     "spectre.css": "^0.5.1",
     "subscriptions-transport-ws": "^0.9.6",
     "typescript-require": "^0.2.9-1",
     "uikit": "^3.0.0-beta.40",
+    "universal-cookie": "^2.1.2",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
@@ -110,7 +122,6 @@
     "@types/node": "^8.0.53",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
-    "@types/react-router-dom": "^4.2.3",
     "@types/webpack-env": "^1.13.2",
     "raf": "^3.4.0",
     "razzle": "^0.8.12",
