Fixed svg images not loading properly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
       "Containers": ["src/Components/Containers"],
       "Assets": ["src/Assets"],
       "Theme": ["src/Theme"],
-      "Utils": ["src/Utils"]
+      "Utils": ["src/Utils"],
+      "@material": ["node_modules/@material"]
     },
     "skipLibCheck": true,
     "inlineSourceMap": false,
