--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "ld-sticker": "^2.0.0",
     "ld-video": "^2.0.0",
     "lodash": "^4.17.5",
+    "material-components-web": "^0.33.0",
+    "material-components-web-react": "^0.0.10",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "medium-draft": "^0.6.0-beta1",
@@ -101,7 +103,9 @@
     "react-select-plus": "^1.2.0",
     "react-spark-scroll-gsap": "^4.0.0",
     "react-spinkit": "^3.0.0",
+    "react-spring": "^3.0.4",
     "react-stack-grid": "^0.7.1",
+    "react-svg-loader": "^2.1.0",
     "react-tag-input": "^4.9.1",
     "react-tap-event-plugin": "^3.0.2",
     "react-timeago": "^3.4.3",
@@ -111,6 +115,7 @@
     "serve-favicon": "^2.3.2",
     "spectre.css": "^0.5.1",
     "subscriptions-transport-ws": "^0.9.6",
+    "svg-url-loader": "^2.3.2",
     "typescript-require": "^0.2.9-1",
     "uikit": "^3.0.0-beta.40",
     "universal-cookie": "^2.1.2",
@@ -125,6 +130,9 @@
     "@types/webpack-env": "^1.13.2",
     "raf": "^3.4.0",
     "razzle": "^0.8.12",
+    "svg-css-modules-loader": "^1.6.1",
+    "svgo": "^1.0.5",
+    "svgo-loader": "^2.1.0",
     "ts-jest": "20.0.6",
     "ts-loader": "2.3.4",
     "tslint": "5.8.0",
