--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.8.12",
   "license": "MIT",
   "scripts": {
-    "start": "razzle start",
+    "start": "NODE_ENV=production node build/server.js",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "start:prod": "NODE_ENV=production node build/server.js"
+    "heroku-postbuild": "yarn run build",
+    "start:prod": "NODE_ENV=production node build/server.js",
+    "start:dev": "razzle start"
   },
   "dependencies": {
     "@types/jquery": "^3.3.1",
@@ -74,6 +76,7 @@
     "perfect-scrollbar": "^1.3.0",
     "prop-types": "^15.6.1",
     "rambda": "^1.0.13",
+    "razzle-heroku": "^2.1.0",
     "react": "^16.2.0",
     "react-anime": "^2.1.0",
     "react-apollo": "^2.0.4",
