--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "NODE_ENV=production node build/server.js",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "heroku-postbuild": "yarn run build",
+    "postbuild": "yarn run build",
     "start:prod": "NODE_ENV=production node build/server.js",
-    "start:dev": "razzle start"
+    "start:dev": "razzle start",
+    "heroku-postbuild": "yarn run build"
   },
   "dependencies": {
     "@types/jquery": "^3.3.1",
