--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "start": "NODE_ENV=production node build/server.js",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "postbuild": "npm run build",
+    "postinstall": "yarn run build",
     "start:prod": "NODE_ENV=production node build/server.js",
     "start:dev": "razzle start",
     "dev": "razzle start",
-    "heroku-postbuild": "yarn run build"
   },
   "dependencies": {
     "@types/jquery": "^3.3.1",
