--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "@types/react-dom": "^16.0.4",
     "@types/webpack-env": "^1.13.2",
     "less-loader": "^4.1.0",
+    "offline-plugin": "^4.9.0",
     "raf": "^3.4.0",
     "razzle": "^0.8.12",
     "semantic-ui-sass": "^2.2.11",
