--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "bootstrap": "^4.0.0",
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
-    "compression": "^1.6.2",
+    "compression": "^1.7.2",
+    "cookie-parser": "^1.4.3",
     "draft-convert": "^2.0.1",
     "draft-js": "^0.10.5",
     "draft-js-dnd-plugin": "^2.0.0-beta1",
@@ -74,6 +75,7 @@
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "medium-draft": "^0.6.0-beta1",
+    "morgan": "^1.9.0",
     "multiscroll-reactjs": "^1.0.2",
     "node-sass-chokidar": "^1.1.2",
     "perfect-scrollbar": "^1.3.0",
@@ -142,8 +144,10 @@
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
     "@types/webpack-env": "^1.13.2",
+    "compression-webpack-plugin": "^1.1.11",
     "less-loader": "^4.1.0",
     "offline-plugin": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
     "raf": "^3.4.0",
     "razzle": "^0.8.12",
     "semantic-ui-sass": "^2.2.11",
@@ -155,7 +159,8 @@
     "tslint": "5.8.0",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.2.0",
-    "typescript": "2.7.2"
+    "typescript": "2.7.2",
+    "webpack-bundle-analyzer": "^2.11.1"
   },
   "jest": {
     "transform": {
