--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@types/react-addons-css-transition-group": "^15.0.4",
     "Dante2": "^0.4.3",
     "anchor-ui": "^6.2.1",
-    "apollo-cache-inmemory": "^1.1.11",
-    "apollo-client": "^2.2.7",
+    "apollo-cache-hermes": "^0.5.25-alpha",
+    "apollo-cache-inmemory": "^1.1.12",
+    "apollo-client": "^2.2.8",
     "apollo-link": "^1.2.1",
     "apollo-link-context": "^1.0.7",
     "apollo-link-error": "^1.0.7",
@@ -28,7 +29,7 @@
     "apollo-link-retry": "^2.2.2",
     "apollo-link-state": "^0.4.1",
     "apollo-link-ws": "^1.0.7",
-    "apollo-utilities": "^1.0.10",
+    "apollo-utilities": "^1.0.11",
     "autoprefixer": "^8.1.0",
     "bootstrap": "^4.0.0",
     "chalk": "^2.3.2",
@@ -38,15 +39,16 @@
     "draft-convert": "^2.0.1",
     "draft-js": "^0.10.5",
     "draft-js-dnd-plugin": "^2.0.0-beta1",
-    "draft-js-emoji-plugin": "^2.0.1",
+    "draft-js-emoji-plugin": "^2.0.2",
     "draft-js-plugins-editor": "^2.0.4",
-    "driver.js": "^0.3.0",
+    "driver.js": "^0.3.8",
     "es6-promise": "^4.0.5",
     "express": "^4.15.3",
+    "extract-loader": "^2.0.1",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
     "font-awesome-sass": "^4.7.0",
-    "fullpage-react": "^3.0.29",
+    "fullpage-react": "^3.0.30",
     "glamor": "^2.20.40",
     "glamorous": "^4.12.1",
     "graphql": "^0.13.2",
@@ -70,14 +72,14 @@
     "ld-video": "^2.0.0",
     "less": "^3.0.1",
     "lodash": "^4.17.5",
-    "material-components-web": "^0.33.0",
+    "material-components-web": "^0.34.1",
     "material-components-web-react": "^0.0.10",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "medium-draft": "^0.6.0-beta1",
     "morgan": "^1.9.0",
     "multiscroll-reactjs": "^1.0.2",
-    "node-sass-chokidar": "^1.1.2",
+    "node-sass-chokidar": "^1.2.2",
     "perfect-scrollbar": "^1.3.0",
     "prop-types": "^15.6.1",
     "rambda": "^1.0.13",
@@ -85,11 +87,11 @@
     "rc-upload": "^2.4.4",
     "react": "^16.2.0",
     "react-anime": "^2.1.0",
-    "react-apollo": "^2.0.4",
-    "react-async-bootstrapper": "^1.1.2",
-    "react-async-component": "^1.0.2",
+    "react-apollo": "^2.1.2",
+    "react-async-bootstrapper": "^2.1.0",
+    "react-async-component": "^2.0.0",
     "react-avatar-image-cropper": "^1.1.7",
-    "react-calendar": "^2.13.5",
+    "react-calendar": "^2.14.0",
     "react-content-loader": "^3.1.1",
     "react-cookie-banner": "^3.0.0",
     "react-cookies": "^0.1.0",
@@ -114,26 +116,26 @@
     "react-select-plus": "^1.2.0",
     "react-spark-scroll-gsap": "^4.0.0",
     "react-spinkit": "^3.0.0",
-    "react-spring": "^3.0.4",
+    "react-spring": "^3.1.0",
     "react-stack-grid": "^0.7.1",
     "react-svg-loader": "^2.1.0",
-    "react-tag-input": "^4.9.1",
+    "react-tag-input": "^5.0.0",
     "react-tap-event-plugin": "^3.0.2",
     "react-timeago": "^3.4.3",
     "recompose": "^0.26.0",
-    "rxjs": "^5.5.6",
+    "rxjs": "^5.5.8",
     "sass-loader": "^6.0.7",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-less": "^2.3.1",
     "semantic-ui-less-module-loader": "^1.0.0",
-    "semantic-ui-react": "^0.79.0",
+    "semantic-ui-react": "^0.79.1",
     "semantic-ui-react-less-loader": "^0.2.0",
-    "serve-favicon": "^2.3.2",
+    "serve-favicon": "^2.5.0",
     "spectre.css": "^0.5.1",
     "subscriptions-transport-ws": "^0.9.6",
     "svg-url-loader": "^2.3.2",
     "typescript-require": "^0.2.9-1",
-    "uikit": "^3.0.0-beta.40",
+    "uikit": "^3.0.0-beta.41",
     "universal-cookie": "^2.1.2",
     "webpack-visualizer-plugin": "^0.1.11"
   },
