--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "draft-js-plugins-editor": "^2.0.4",
     "draft-js-prism-plugin": "^0.1.3",
     "driver.js": "^0.3.8",
+    "emoji-regex": "^6.5.1",
     "es6-promise": "^4.0.5",
     "express": "^4.15.3",
     "extract-loader": "^2.0.1",
