--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-client": "^2.2.8",
     "apollo-link": "^1.2.1",
+    "apollo-link-batch-http": "^1.2.1",
     "apollo-link-context": "^1.0.7",
     "apollo-link-error": "^1.0.7",
     "apollo-link-http": "^1.5.3",
@@ -149,7 +150,7 @@
     "spectre.css": "^0.5.1",
     "string-replace-to-array": "^1.0.3",
     "styled-components": "^3.2.5",
-    "subscriptions-transport-ws": "^0.9.6",
+    "subscriptions-transport-ws": "^0.9.7",
     "svg-url-loader": "^2.3.2",
     "typescript-require": "^0.2.9-1",
     "uikit": "^3.0.0-beta.41",
