--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.0.3",
     "react-idle-timer": "^2.0.1",
+    "react-infinite-scroll-component": "^4.0.2",
     "react-infinite-scroller": "^1.1.3",
     "react-loadable": "^5.3.1",
     "react-lottie": "^1.1.0",
