--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "perfect-scrollbar": "^1.3.0",
     "prismjs": "^1.14.0",
     "prop-types": "^15.6.1",
+    "pure-react-carousel": "^1.12.1",
     "rambda": "^1.1.0",
     "razzle-heroku": "^2.1.0",
     "rc-upload": "^2.4.4",
