--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "react-spring": "^3.1.0",
     "react-stack-grid": "^0.7.1",
     "react-svg-loader": "^2.1.0",
+    "react-tag-autocomplete": "^5.5.1",
     "react-tag-input": "^5.0.0",
     "react-tap-event-plugin": "^3.0.2",
     "react-textarea-autosize": "^6.1.0",
